--- a/src/conditions/BUILD
+++ b/src/conditions/BUILD
@@ -17,6 +17,12 @@ config_setting(
 )
 
 config_setting(
+    name = "linux_x86_32",
+    values = {"cpu": "x86_32"},
+    visibility = ["//visibility:public"],
+)
+
+config_setting(
     name = "linux_x86_64",
     values = {"cpu": "k8"},
     visibility = ["//visibility:public"],
