Fix build for x86 (not x86_64)
The zip -d flag will error if it doesn't find that extension. This is a
fix for x86 32bit architecture.

Signed-off-by: Michal Rostecki <mrostecki@opensuse.org>

--- a/src/conditions/BUILD
+++ b/src/conditions/BUILD
@@ -17,6 +17,12 @@ config_setting(
 )
 
 config_setting(
+    name = "linux_x86",
+    values = {"cpu": "x86"},
+    visibility = ["//visibility:public"],
+)
+
+config_setting(
     name = "linux_x86_64",
     values = {"cpu": "k8"},
     visibility = ["//visibility:public"],
